--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,33 @@
-# Compiled class file
+### OS ###
+.DS_Store
+Thumbs.db
+
+### Java ###
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
+
+### Logs ###
+*.log
+
+# Package Files #
+*.nar
 *.zip
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+### Eclipse ###
+.project
+.classpath
+.settings/
+bin/
+tmp/
+
+### Maven ###
+target/
+!.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.properties
+
+### Notes ###
+HELP.md
